--- a/Lab2/Project/Base.lproj/Main.storyboard
+++ b/Lab2/Project/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="17" minValue="15" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="4px-JJ-5vk">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="19" minValue="15" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="4px-JJ-5vk">
                                 <rect key="frame" x="55" y="118" width="304" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="VMz-TD-pVZ"/>
@@ -133,8 +133,8 @@
                                     <action selector="sliderAction:" destination="C9k-IL-jbm" eventType="valueChanged" id="XUN-0w-z94"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17 kHz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZM-Mz-huc">
-                                <rect key="frame" x="180" y="158" width="54" height="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19 kHz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZM-Mz-huc">
+                                <rect key="frame" x="179.5" y="158" width="55.5" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -145,6 +145,12 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19 dB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImP-gA-5Q2">
+                                <rect key="frame" x="184" y="190" width="46" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -152,7 +158,9 @@
                             <constraint firstItem="lZM-Mz-huc" firstAttribute="top" secondItem="4px-JJ-5vk" secondAttribute="bottom" constant="10" id="5dK-vc-Vys"/>
                             <constraint firstItem="4px-JJ-5vk" firstAttribute="top" secondItem="18h-z7-aWg" secondAttribute="top" constant="30" id="IgX-XJ-w3m"/>
                             <constraint firstItem="rgT-jB-2tA" firstAttribute="centerX" secondItem="QHz-vC-YAk" secondAttribute="centerX" id="JFG-eB-ybB"/>
+                            <constraint firstItem="ImP-gA-5Q2" firstAttribute="top" secondItem="lZM-Mz-huc" secondAttribute="bottom" constant="10" id="bpL-3M-IAe"/>
                             <constraint firstItem="lZM-Mz-huc" firstAttribute="centerX" secondItem="QHz-vC-YAk" secondAttribute="centerX" id="fcC-jG-5gd"/>
+                            <constraint firstItem="ImP-gA-5Q2" firstAttribute="centerX" secondItem="QHz-vC-YAk" secondAttribute="centerX" id="i8N-PX-xnj"/>
                             <constraint firstItem="4px-JJ-5vk" firstAttribute="centerX" secondItem="QHz-vC-YAk" secondAttribute="centerX" id="pYQ-p5-T72"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="18h-z7-aWg"/>
